--- a/index.html
+++ b/index.html
@@ -9,6 +9,37 @@
     <script src="./main.js" defer></script>
 </head>
 <body>
-    
+    <div class="container">
+        <div class="display">
+            <div class="input-text">input text</div>
+            <div class="output-text">output text</div>
+        </div>
+        <div class="input">
+            <div class="row">
+                <button id="7">7</button>
+                <button id="8">8</button>
+                <button id="9">9</button>
+                <button id="add">+</button>
+            </div>
+            <div class="row">
+                <button id="4">4</button>
+                <button id="5">5</button>
+                <button id="6">6</button>
+                <button id="subtract">-</button>
+            </div>
+            <div class="row">
+                <button id="1">1</button>
+                <button id="2">2</button>
+                <button id="3">3</button>
+                <button id="multiply">*</button>
+            </div>
+            <div class="row">
+                <button id="clear">clr</button>
+                <button id="0">0</button>
+                <button id="delete">del</button>
+                <button id="divide">/</button>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
