replace clear with equals

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <button id="multiply">*</button>
             </div>
             <div class="row">
-                <button id="clear">clr</button>
+                <button id="equals">=</button>
                 <button id="0">0</button>
                 <button id="delete">del</button>
                 <button id="divide">/</button>
