--- a/index.html
+++ b/index.html
@@ -16,28 +16,28 @@
         </div>
         <div class="input">
             <div class="row">
-                <button id="seven">7</button>
-                <button id="eight">8</button>
-                <button id="nine">9</button>
-                <button id="add">+</button>
+                <button class="number">7</button>
+                <button class="number">8</button>
+                <button class="number">9</button>
+                <button class="operator">+</button>
             </div>
             <div class="row">
-                <button id="four">4</button>
-                <button id="five">5</button>
-                <button id="six">6</button>
-                <button id="subtract">-</button>
+                <button class="number">4</button>
+                <button class="number">5</button>
+                <button class="number">6</button>
+                <button class="operator">-</button>
             </div>
             <div class="row">
-                <button id="one">1</button>
-                <button id="two">2</button>
-                <button id="three">3</button>
-                <button id="multiply">*</button>
+                <button class="number">1</button>
+                <button class="number">2</button>
+                <button class="number">3</button>
+                <button class="operator">*</button>
             </div>
             <div class="row">
-                <button id="equals">=</button>
-                <button id="zero">0</button>
-                <button id="delete">del</button>
-                <button id="divide">/</button>
+                <button class="operator">=</button>
+                <button class="number">0</button>
+                <button class="operator">AC</button>
+                <button class="operator">/</button>
             </div>
         </div>
     </div>
