add clear display button

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <div class="row">
                 <button class="operator">=</button>
                 <button class="number">0</button>
-                <button class="operator">AC</button>
+                <button class="clear">AC</button>
                 <button class="operator">/</button>
             </div>
         </div>
