fix equals displaying on screen

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <button class="operator">*</button>
             </div>
             <div class="row">
-                <button class="operator">=</button>
+                <button class="equals">=</button>
                 <button class="number">0</button>
                 <button class="clear">AC</button>
                 <button class="operator">/</button>
