--- a/index.html
+++ b/index.html
@@ -16,10 +16,15 @@
         </div>
         <div class="input">
             <div class="row">
+                <button class="clear">AC</button>
+                <button class="delete">Del</button>
+                <button class="operator">/</button>
+            </div>
+            <div class="row">
                 <button class="number">7</button>
                 <button class="number">8</button>
                 <button class="number">9</button>
-                <button class="operator">+</button>
+                <button class="operator">*</button>
             </div>
             <div class="row">
                 <button class="number">4</button>
@@ -31,13 +36,12 @@
                 <button class="number">1</button>
                 <button class="number">2</button>
                 <button class="number">3</button>
-                <button class="operator">*</button>
+                <button class="operator">+</button>
             </div>
             <div class="row">
-                <button class="equals">=</button>
+                <button class="decimal">.</button>
                 <button class="number">0</button>
-                <button class="clear">AC</button>
-                <button class="operator">/</button>
+                <button class="equals">=</button>
             </div>
         </div>
     </div>
